--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -170,3 +170,21 @@ body {
 	margin: auto;
 	color: white;
 }
+
+/*=======UTILS==========================================================================================================*/
+
+.bold {
+	font-weight: bold;
+}
+
+.flex-column {
+	display: flex;
+	flex-direction: column;
+	grid-gap: 10px;
+}
+
+.flex-row-wrap {
+	display: flex;
+	flex-wrap: wrap;
+	grid-gap: 10px;
+}
