--- a/src/main/resources/templates/student-progress.html
+++ b/src/main/resources/templates/student-progress.html
@@ -5,6 +5,7 @@
 	<title>Title</title>
 	<div th:replace="fragments/head :: head"></div>
 	<script src="/script/student-progress-script.js"></script>
+	<script src="/script/components/course-card.js"></script>
 </head>
 <body>
 
@@ -17,35 +18,22 @@
 			
 			<div id="student-info-container" style="grid-area: info">
 				<span class="student-info-label">Student ID</span>
-				<span class="student-info-answer" id="student-id"></span>
+				<span class="bold" id="student-id"></span>
 				
 				<span class="student-info-label">Degree</span>
-				<span class="student-info-answer" id="major-name"></span>
+				<span class="bold" id="major-name"></span>
 				
 				<span class="student-info-label">Distributive Credits Required</span>
-				<span class="student-info-answer" id="major-dist-credits"></span>
+				<span class="bold" id="major-dist-credits"></span>
 				
 				<span class="student-info-label">Elective Credits Required</span>
-				<span class="student-info-answer" id="major-elect-credits"></span>
+				<span class="bold" id="major-elect-credits"></span>
 			</div>
 			
 			<div id="main-course-container" style="grid-area: main">
-				
-				<div id="course-card-template" class="course-card">
-					<div class="course-icon">
-						<span class="material-icons">done</span>
-					</div>
-					<div>
-						<div class="course-code"></div>
-						<div class="course-name"></div>
-					</div>
-					<span class="course-credit"></span>
-				</div>
-				
-				<div id="main-done" class="main-course-container"></div>
-				<div id="main-pending" class="main-course-container"></div>
-				<div id="main-close" class="main-course-container"></div>
-				
+				<div id="main-done" class="flex-row-wrap"></div>
+				<div id="main-pending" class="flex-row-wrap"></div>
+				<div id="main-close" class="flex-row-wrap"></div>
 			</div>
 			
 			<div id="dist-course-container" style="grid-area: dist">
@@ -54,14 +42,13 @@
 				<p>
 					Some majors require a different amount of distributive credits, and some majors don't require any distributive courses.
 					Your major requires a total of
-					<span style="font-weight: bold" id="major-dist-credits-inline">TO BE IMPLEMENTED</span>
+					<span id="major-dist-credits-inline" class="bold">TO BE IMPLEMENTED</span>
 					distributive requirement credits.
 				</p>
 				
-				<div id="dist-done" class="dist-course-container"></div>
-				<div id="dist-pending" class="dist-course-container"></div>
-				<div id="dist-close" class="dist-course-container"></div>
-				
+				<div id="dist-done" class="flex-column"></div>
+				<div id="dist-pending" class="flex-column"></div>
+				<div id="dist-close" class="flex-column"></div>
 			</div>
 		
 		</div>
